     was originally intended.
   * Fixed a segfault issue with parallel state sampling in general ssm_ulg/mlg/ung/mng models
     caused by calls to R function inside parallel region.
   * Fixed a bug from version 1.0.0 in IS1 type sampling which actually lead to IS2 type sampling.
   * Fixed out-of-bounds error in IS3 sampling.
   * Fixed weight computations for multivariate nonlinear models in case of psi-APF.
   
bssm 1.1.1 (Release date: 2021-01-22)
==============
   
   * Added missing scaling for Gamma distribution in importance sampling weights for added numerical robustness.
   * Fixed sequential importance sampling for multivariate non-gaussian models.
   * Fixed simulation smoother for multivariate Gaussian models.

bssm 1.1.0 (Release date: 2021-01-19)
==============
   
   * Added function `suggest_N` which can be used to choose 
     suitable number of particles for IS-MCMC.
   * Added function `post_correct` which can be used to update 
     previous approximate MCMC with IS-weights.
   * Gamma priors are now supported in easy-to-use models such as `bsm_lg`. 
   * The adaptation of the proposal distribution now continues also after the burn-in by default. 
   * Changed default MCMC type to typically most efficient and robust IS2.
   * Renamed `nsim` argument to `particles` in most of the R functions (`nsim` also works with a warning).
   * Fixed a bug with bsm models with covariates, where all standard deviation parameters were fixed. 
     This resulted error within MCMC algorithms.
   * Fixed a dimension drop bug in the predict method which caused error for univariate models.
   * Fixed some docs and added more examples.
   * Fixed few typos in vignette (thanks Kyle Hussman)
   * Reduced runtime of MCMC in growth model vignette as requested by CRAN.
  

bssm 1.0.1-1 (Release date: 2020-11-12)
==============

  * Added an argument `future` for predict method which allows 
    predictions for current time points by supplying the original model 